syntax = "proto3";

package containerd.v1.types;

import "github.com/docker/containerd/api/types/state/state.proto";

message ProcessState {
	uint32 pid = 1;
	State state = 2;
}
